rnsc/test_data/integration/error/parser/type_hints/cp_idx/negative.rns
.class public MainClass
.super @cp_idx -1 ; explicit constant pool index
